chore(ci): run unittest
Signed-off-by: Wataru Ishida <wataru.ishid@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,5 +15,9 @@ jobs:
             with:
                 submodules: recursive
                 fetch-depth: 0
-          - name: Build agent
+          - name: Build
             uses: docker/build-push-action@v5
+          - name: Unittest
+            uses: docker/build-push-action@v5
+            with:
+                target: unittest
