--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,16 @@ jobs:
             with:
                 submodules: recursive
                 fetch-depth: 0
+          - name: Set up Docker Buildx
+            uses: docker/setup-buildx-action@v3
           - name: Build
             uses: docker/build-push-action@v5
+            with:
+                cache-from: type=gha
+                cache-to: type=gha,mode=max
           - name: Unittest
             uses: docker/build-push-action@v5
             with:
                 target: unittest
+                cache-from: type=gha
+                cache-to: type=gha,mode=max
