--- a/reduction_server/Cargo.toml
+++ b/reduction_server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 aligned_box = "0.2.1"
+cfg-if = "1.0.0"
 clap = { version = "4.4.14", features = ["derive"] }
 env_logger = "0.10.1"
 half = { version = "2.3.1", features = ["num-traits"] }
